--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Shoe Store</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">Login</string>
+    <string name="join_now">Join now</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="please_enter_valid_email">Please enter a valid email</string>
+    <string name="please_enter_valid_password">Please enter a valid password</string>
 </resources>
